--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
     "axios": "^1.10.0",
+    "bootstrap": "^5.3.7",
     "mini-css-extract-plugin": "^2.9.2",
     "next": "15.3.5",
     "react": "^19.0.0",
