feat: add history

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@popperjs/core": "^2.11.8",
     "axios": "^1.10.0",
     "bootstrap": "^5.3.7",
+    "chart.js": "^4.5.0",
     "mini-css-extract-plugin": "^2.9.2",
     "next": "15.3.5",
     "react": "^19.0.0",
