--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mini-css-extract-plugin": "^2.9.2",
     "next": "15.3.5",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
